user maquetado todo

--- a/src/app/panel/directorios/usuarios/admin-add/admin-add.component.html
+++ b/src/app/panel/directorios/usuarios/admin-add/admin-add.component.html
@@ -4,7 +4,7 @@
             <h3>Agregar Administrador</h3>
         </div>
         <div class="buttons">
-            <button class="black">cancelar</button>
+            <button class="black" [routerLink]="['/admin/usuarios']">cancelar</button>
             <button class="pink">crear cuenta</button>
         </div>
         <div class="input-content">
