--- a/src/app/panel/directorios/usuarios/admin-modify/admin-modify.component.html
+++ b/src/app/panel/directorios/usuarios/admin-modify/admin-modify.component.html
@@ -12,7 +12,7 @@
                 <label>Fernando Cortes Villalobos</label>
             </div>
             <div class="buttons-wrapper">
-                <button class="black">regresar</button>
+                <button class="black" [routerLink]="['/admin/usuarios']">regresar</button>
                 <button class="pink">guardar</button>
             </div>
         </div>
