--- a/src/app/panel/directorios/usuarios/client/client.component.html
+++ b/src/app/panel/directorios/usuarios/client/client.component.html
@@ -1,3 +1,128 @@
-<p>
-  client works!
-</p>
+<div class="admin-wrapper">
+    <div class="admin-content">
+        <div class="title">
+            <h3>Usuarios</h3>
+        </div>
+        <div class="title large">
+            <h5 (click)="services = !services" [ngClass]="{'pink': !services}">Datos de Cliente</h5>
+            <h5 (click)="services = !services" [ngClass]="{'pink': services}">Servicios</h5>
+        </div>
+        <div *ngIf="!services" class="buttons">
+            <div class="info">
+                <img src="https://www.loginradius.com/wp-content/plugins/all-in-one-seo-pack/images/default-user-image.png" />
+                <label>Fernando Cortes Villalobos</label>
+            </div>
+            <div class="buttons-wrapper">
+                <button class="black" [routerLink]="['/admin/usuarios']">regresar</button>
+                <button class="pink">guardar</button>
+            </div>
+        </div>
+        <div *ngIf="!services" class="input-content">
+            <div class="inputs-wrapper">
+                <div class="input">
+                    <label>Nombre</label>
+                    <input type="text" />
+                </div>
+                <div class="input">
+                    <label>Teléfono</label>
+                    <input type="number" />
+                </div>
+            </div>
+            <div class="inputs-wrapper">
+                <div class="input">
+                    <label>Apellido</label>
+                    <input type="text" />
+                </div>
+                <div class="input">
+                    <label>Email</label>
+                    <input type="email" />
+                </div>
+            </div>
+        </div>
+        <h5 *ngIf="!services" class="autos">Autos Favoritos:</h5>
+        <div *ngIf="!services" class="input-content">
+            <div class="inputs-wrapper">
+                <div class="input">
+                    <label>Marca</label>
+                    <input type="text" />
+                </div>
+                <div class="input">
+                    <label>Modelo</label>
+                    <input type="text" />
+                </div>
+                <div class="input">
+                    <label>Color</label>
+                    <input type="text" />
+                </div>
+            </div>
+            <div class="inputs-wrapper">
+                <div class="input">
+                    <label>Marca</label>
+                    <input type="text" />
+                </div>
+                <div class="input">
+                    <label>Modelo</label>
+                    <input type="text" />
+                </div>
+                <div class="input">
+                    <label>Color</label>
+                    <input type="text" />
+                </div>
+            </div>
+        </div>
+        <div *ngIf="!services" class="super-admin">
+            <h4>Activar o desactivar cuenta</h4>
+            <div class="check">
+                <label class="switch">
+                  <input type="checkbox">
+                  <span class="slider round"></span>
+              </label>
+                <p *ngIf="true">Inactivo</p>
+                <p *ngIf="false">Activo</p>
+            </div>
+        </div>
+        <div *ngIf="services" class="buttons">
+            <div class="info">
+                <img src="https://www.loginradius.com/wp-content/plugins/all-in-one-seo-pack/images/default-user-image.png" />
+                <label>Fernando Cortes Villalobos</label>
+            </div>
+            <div class="buttons-wrapper">
+                <button class="black" [routerLink]="['/admin/usuarios']">regresar</button>
+            </div>
+        </div>
+        <table *ngIf="services">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>
+                        Fecha
+                    </th>
+                    <th>Codigo de Unidad</th>
+                    <th>Tipo</th>
+                    <th>
+                        Total servicio
+                        <i class="fas fa-arrow-down"></i>
+                    </th>
+                    <th>Estatus</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let user of GetAdmins; let i = index">
+                    <td>
+                        <img src="./../../../../assets/descarga.png" />
+                    </td>
+                    <td>
+                        {{ user.fullname }}
+                    </td>
+                    <td>{{ user.phone }}</td>
+                    <td>{{ user.email }}</td>
+                    <td>{{ user.email }}</td>
+                    <td>
+                        <button class="active" (click)="active = !active" *ngIf="active">Habilitada</button>
+                        <button class="inactive" (click)="active = !active" *ngIf="!active">Deshabilitada</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
