--- a/src/app/panel/directorios/usuarios/usuarios.component.scss
+++ b/src/app/panel/directorios/usuarios/usuarios.component.scss
@@ -1,219 +1,223 @@
-.user-wrapper{
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  .user-container{
+.user-wrapper {
     width: 100%;
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
-    padding: 8px 24px;
-    .email{
-      width: 100%;
-      display: flex;
-      justify-content: flex-end;
-      margin-right: 200px;
-      font-weight: 700;
-    }
-    .user-head{
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 32px;
-      .user-buttons{
-        width: auto;
-        min-width: 200px;
-        display: flex;
-        justify-content: space-between;
-        a{
-          border: 1px #1d00ff solid;
-          cursor: pointer;
-          border-radius: 10px;
-          width: 64px;
-          height: 48px;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          margin: 0 8px;
-          i{
-            color: #c02278;
-            font-size: 24px;
-          }
-        }
-        .number-pink{
-          background-color: #c02278;
-          border-radius: 4px;
-          width: 24px;
-          height: 20px;
-          font-size: 12px;
-          color: white;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          margin: 38px 16px -10px -20px;
-        }
-        .input{
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          width: 100%;
-          border: 1px #1d00ff solid;
-          border-radius: 10px;
-          max-width: 250px;
-          i{
-            color: black;
-            padding: 0 8px;
-            font-size: 24px;
-            cursor: pointer;
-          }
-          input{
-            border: none;
-            height: 100%;
-            width: -webkit-fill-available;
-            background: transparent;
-          }
-        }
-      }
-      h2{
-
-      }
-    }
-    .user-nav{
-      width: 100%;
-      display: flex;
-      justify-content: flex-start;
-      border-bottom: 1px gray solid;
-      margin-bottom: 32px;
-      .nav-title{
-        width: 300px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-weight: 800;
-        color: #4e73b7;
-        padding: 12px 0;
-        cursor: pointer;
-      }
-      .selected{
-        border-bottom: 2px #c02278 solid;
-        color: black;
-      }
-    }
-    .user-tables{
-      width: 100%;
-      display: flex;
-      justify-content: flex-start;
-      table{
-        width: -webkit-fill-available;
-        .ten{
-          width: 10%;
-        }
-        .fifteen{
-          width: 15%;
-        }
-        .five{
-          width: 5%;
-        }
-        .twenty{
-          width: 20%;
-        }
-        tbody{
-          tr{
-            cursor: pointer;
-            .point-more{
-              button{
-                background: transparent;
-                border: none;
-                color: #c02278;
-                font-size: 24px;
-              }
-            }
-            td:nth-child(2) {
-              width: 30%;
-            }
-            td:last-child {
-              width: 5%;
-            }
-            td:first-child {
-              width: 5%;
-            }
-          }
-          tr:hover {
-            -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-            -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-            box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-          }
-        }
-      }
-      th{
-        color: #b2b2b2;
-        padding-bottom: 16px;
-        font-size: 20px;
-      }
-      th:last-child {
-        width: 5%;
-      }
-      td{
-        font-size: 14px;
-        button{
-          background-color: white;
-          color: black;
-          font-weight: 500;
-          cursor: pointer;
-          width: 150px;
-        }
-        .active{
-          border: 1px #a5cd7e solid;
-        }
-        .inactive{
-          border: 1px #c02278 solid;
-        }
-      }
-      td:last-child {
-        width: 5%;
-      }
-      th, td{
-        border-bottom: 1px gray solid;
-        font-weight: 700;
-        i{
-          color: #c02278;
-          font-size: 20px;
-        }
-        img{
-          width: 100px;
-          height: 100px;
-          padding: 8px;
-        }
-      }
-      .more-float{
-        background-color: white;
+    .user-container {
+        width: 100%;
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
-        width: 100%;
-        max-width: 200px;
-        position: absolute;
-        right: calc(5% + 16px);
-        margin-top: 80px;
-        -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-        -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-        box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-        button{
-          width: 100%;
-          border: none;
-          background: transparent;
-          padding: 8px;
-          display: flex;
-          justify-content: flex-start;
-          align-items: center;
-          i{
-            margin-right: 4px;
-          }
+        padding: 8px 24px;
+        .email {
+            width: 100%;
+            display: flex;
+            justify-content: flex-end;
+            margin-right: 200px;
+            font-weight: 700;
         }
-        button:hover{
-          background-color: #b2ede8;
+        .user-head {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 32px;
+            .user-buttons {
+                width: auto;
+                min-width: 200px;
+                display: flex;
+                justify-content: space-between;
+                a {
+                    border: 1px #1d00ff solid;
+                    cursor: pointer;
+                    border-radius: 10px;
+                    width: 64px;
+                    height: 48px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    margin: 0 8px;
+                    i {
+                        color: #c02278;
+                        font-size: 24px;
+                    }
+                }
+                .number-pink {
+                    background-color: #c02278;
+                    border-radius: 4px;
+                    width: 24px;
+                    height: 20px;
+                    font-size: 12px;
+                    color: white;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin: 38px 16px -10px -20px;
+                }
+                .input {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    width: 100%;
+                    border: 1px #1d00ff solid;
+                    border-radius: 10px;
+                    max-width: 250px;
+                    i {
+                        color: black;
+                        padding: 0 8px;
+                        font-size: 24px;
+                        cursor: pointer;
+                    }
+                    input {
+                        border: none;
+                        height: 100%;
+                        width: -webkit-fill-available;
+                        background: transparent;
+                    }
+                }
+            }
+            h2 {}
         }
-      }
+        .user-nav {
+            width: 100%;
+            display: flex;
+            justify-content: flex-start;
+            border-bottom: 1px gray solid;
+            margin-bottom: 32px;
+            .nav-title {
+                width: 300px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-weight: 800;
+                color: #4e73b7;
+                padding: 12px 0;
+                cursor: pointer;
+            }
+            .selected {
+                border-bottom: 2px #c02278 solid;
+                color: black;
+            }
+        }
+        .user-tables {
+            width: 100%;
+            display: flex;
+            justify-content: flex-start;
+            table {
+                width: -webkit-fill-available;
+                .ten {
+                    width: 10%;
+                }
+                .fifteen {
+                    width: 15%;
+                }
+                .five {
+                    width: 5%;
+                }
+                .twenty {
+                    width: 20%;
+                }
+                tbody {
+                    tr {
+                        cursor: pointer;
+                        .point-more {
+                            button {
+                                background: transparent;
+                                border: none;
+                                color: #c02278;
+                                font-size: 24px;
+                            }
+                        }
+                        td:nth-child(2) {
+                            width: 30%;
+                        }
+                        td:last-child {
+                            width: 5%;
+                        }
+                        td:first-child {
+                            width: 5%;
+                        }
+                    }
+                    tr:hover {
+                        -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+                        -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+                        box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+                    }
+                }
+            }
+            th {
+                color: #b2b2b2;
+                padding-bottom: 16px;
+                font-size: 20px;
+                text-transform: uppercase;
+            }
+            th:last-child {
+                width: 5%;
+            }
+            td {
+                font-size: 14px;
+                button {
+                    background-color: white;
+                    color: black;
+                    font-weight: 500;
+                    cursor: pointer;
+                    width: auto;
+                }
+                .active {
+                    border: 1px #a5cd7e solid;
+                }
+                .inactive {
+                    border: 1px #c02278 solid;
+                }
+            }
+            td:last-child {
+                width: 5%;
+            }
+            th,
+            td {
+                border-bottom: 1px gray solid;
+                font-weight: 700;
+                i {
+                    color: #c02278;
+                    font-size: 20px;
+                }
+                img {
+                    width: 100px;
+                    height: 100px;
+                    padding: 8px;
+                }
+            }
+            .more-float {
+                background-color: white;
+                display: flex;
+                justify-content: center;
+                flex-wrap: wrap;
+                width: 100%;
+                max-width: 200px;
+                position: absolute;
+                right: 72px;
+                -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+                -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+                box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+                button {
+                    width: 100%;
+                    border: none;
+                    background: transparent;
+                    padding: 8px;
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: center;
+                    cursor: pointer;
+                    i {
+                        margin-right: 4px;
+                    }
+                }
+                button:hover {
+                    background-color: rgba(0, 193, 193, 0.25)!important;
+                }
+            }
+        }
     }
-  }
+}
+
+.none {
+    display: none;
 }
