--- a/src/app/panel/directorios/usuarios/wizi-add/wizi-add.component.html
+++ b/src/app/panel/directorios/usuarios/wizi-add/wizi-add.component.html
@@ -1,3 +1,63 @@
-<p>
-  wizi-add works!
-</p>
+<div class="admin-wrapper">
+    <div class="admin-content">
+        <div class="title">
+            <h3>Agregar Wizipecialista Interno</h3>
+        </div>
+        <div class="buttons">
+            <div class="info">
+            </div>
+            <div class="buttons-wrapper">
+                <button class="black" [routerLink]="['/admin/usuarios']">cancelar</button>
+                <button class="pink">crear cuenta</button>
+            </div>
+        </div>
+        <div class="input-content">
+            <div class="inputs-wrapper">
+                <div class="input">
+                    <label>Nombre</label>
+                    <input type="text" />
+                </div>
+                <div class="input">
+                    <label>Teléfono</label>
+                    <input type="number" />
+                </div>
+            </div>
+            <div class="inputs-wrapper">
+                <div class="input">
+                    <label>Apellido</label>
+                    <input type="text" />
+                </div>
+                <div class="input">
+                    <label>Email</label>
+                    <input type="email" />
+                </div>
+            </div>
+        </div>
+        <h5 class="autos">Contacto de Emergencia</h5>
+        <div class="input-content">
+            <div class="inputs-wrapper">
+                <div class="input">
+                    <label>Nombre<span>*</span></label>
+                    <input type="text" />
+                </div>
+                <div class="input">
+                    <label>Parentesco<span>*</span></label>
+                    <input type="text" />
+                </div>
+                <div class="input">
+                    <label>Telefóno<span>*</span></label>
+                    <input type="text" />
+                </div>
+            </div>
+        </div>
+        <h5 class="autos">Asignar Código de Registro</h5>
+        <div class="input-content no-border">
+            <div class="inputs-wrapper">
+                <div class="input">
+                    <label>Código de Unidad<span>*</span></label>
+                    <input type="text" />
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
