--- a/src/app/panel/panel.component.html
+++ b/src/app/panel/panel.component.html
@@ -7,31 +7,31 @@
 
       <h4 class="col-12 text-white mt-4"> DIRECTORIOS </h4>
       <a class="col-12" [routerLink]="[ '/admin/usuarios' ]" routerLinkActive="active-link">
-        <mat-icon class="text-white">bookmark</mat-icon> Usuarios
+        <mat-icon class="text-white mr-2">chat_bubble</mat-icon> Usuarios
       </a>
       <a class="col-12" [routerLink]="[ '/admin/servicios' ]" routerLinkActive="active-link">
-        <mat-icon class="text-white">bookmark</mat-icon> Servicios
+        <mat-icon class="text-white mr-2">chat_bubble</mat-icon> Servicios
       </a>
       <a class="col-12" [routerLink]="[ '/admin/carros' ]" routerLinkActive="active-link">
-        <mat-icon class="text-white">bookmark</mat-icon> Carros categorizados
+        <mat-icon class="text-white mr-2">chat_bubble</mat-icon> Carros categorizados
       </a>
       <a class="col-12" [routerLink]="[ '/admin/carros' ]" routerLinkActive="active-link">
-        <mat-icon class="text-white">bookmark</mat-icon> Nuevos carros
+        <mat-icon class="text-white mr-2">chat_bubble</mat-icon> Nuevos carros
       </a>
 
       <h4 class="col-12 text-white mt-4"> MANEJO DE USUARIOS </h4>
-      <a class="col-12" [routerLink]="[ '/admin/carros' ]" routerLinkActive="active-link">
-        <mat-icon class="text-white">bookmark</mat-icon> Perfil
+      <a class="col-12" [routerLink]="[ '/admin/perfil' ]" routerLinkActive="active-link">
+        <mat-icon class="text-white mr-2">chat_bubble</mat-icon> Perfil
       </a>
       <a class="col-12" [routerLink]="[ '/admin/carros' ]" routerLinkActive="active-link">
-        <mat-icon class="text-white">bookmark</mat-icon> Estadisticas
+        <mat-icon class="text-white mr-2">chat_bubble</mat-icon> Estadisticas
       </a>
-      <a class="col-12" [routerLink]="[ '/admin/carros' ]" routerLinkActive="active-link">
-        <mat-icon class="text-white">bookmark</mat-icon> Pagos
+      <a class="col-12" [routerLink]="[ '/admin/pagos' ]" routerLinkActive="active-link">
+        <mat-icon class="text-white mr-2">chat_bubble</mat-icon> Pagos
       </a>
 
       <a class="col-12 d-line mt-4" [routerLink]="[ '/admin/carros' ]" routerLinkActive="active-link">
-        <mat-icon class="text-white">exit_to_app</mat-icon> Logout
+        <mat-icon class="text-white mr-2">exit_to_app</mat-icon> Logout
       </a>
     </div>
   </div>
