--- a/src/app/panel/manejo-usuario/pago/pago.component.html
+++ b/src/app/panel/manejo-usuario/pago/pago.component.html
@@ -1,3 +1,151 @@
-<p>
-  pago works!
-</p>
+<div class="user-wrapper">
+    <div class="user-container">
+        <div class="email">
+            <label>Email</label>
+        </div>
+        <div class="user-head">
+            <h2>Usuarios</h2>
+            <div class="user-buttons">
+                <a><i class="fas fa-bell"  [routerLink]="['/admin/notify']"></i></a>
+                <div class="number-pink">3</div>
+                <div class="input">
+                    <i class="fas fa-search"></i>
+                    <input type="text" name="search" (click)="search = !search" />
+                </div>
+            </div>
+        </div>
+        <div class="user-nav">
+            <div class="nav-title" [ngClass]="{selected: nav === 'admin'}" (click)="nav = 'admin'">
+                <h3>Tiempo Real</h3>
+            </div>
+            <div class="nav-title" [ngClass]="{selected: nav === 'wiz'}" (click)="nav = 'wiz'">
+                <h3>Historial</h3>
+            </div>
+     
+        </div>
+        <div class="user-tables">
+            <table *ngIf="nav === 'admin'">
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th>
+                            Nombre
+                            <i class="fas fa-arrow-down"></i>
+                        </th>
+                        <th>Telefono</th>
+                        <th>
+                            Email
+                            <i class="fas fa-arrow-down"></i></th>
+                        <th>Cuenta</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let user of GetAdmins; let i = index">
+                        <td>
+                            <img src="./../../../../assets/descarga.png" />
+                        </td>
+                        <td>
+                            {{ user.fullname }}
+                        </td>
+                        <td>{{ user.phone }}</td>
+                        <td>{{ user.email }}</td>
+                        <td>
+                            <button class="active" (click)="active = !active" *ngIf="active">Habilitada</button>
+                            <button class="inactive" (click)="active = !active" *ngIf="!active">Deshabilitada</button>
+                        </td>
+                        <td class="point-more">
+                            <ng-template let-a="aVariable" [ngTemplateOutletContext]="{ aVariable: false }" [ngTemplateOutlet]="selfie" #selfie>
+                                <button (click)="a = !a">
+                              <i class="fas fa-ellipsis-h"></i>
+                            </button>
+                                <div>
+                                    <div class="more-float" *ngIf="a">
+                                        <button (click)="a = false">
+                                      <i class="fas fa-key"></i>
+                                      Deshabilitar
+                                  </button>
+                                        <button (click)="editAdmin(i); a = false">
+                                      <i class="fas fa-edit"></i>
+                                      Edit
+                                  </button>
+                                        <button (click)="a = false">
+                                      <i class="fas fa-trash-alt"></i>
+                                      Delete
+                                  </button>
+                                    </div>
+                                </div>
+                            </ng-template>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <table *ngIf="nav === 'wiz'">
+                <thead>
+                    <tr>
+                        <th class="five"></th>
+                        <th class="twenty">
+                            Nombre
+                            <i class="fas fa-arrow-down"></i>
+                        </th>
+                        <th class="ten">Puntaje</th>
+                        <th class="fifteen">Telefono</th>
+                        <th class="fifteen">
+                            Email
+                            <i class="fas fa-arrow-down"></i>
+                        </th>
+                        <th class="ten">Tipo</th>
+                        <th class="ten">Cuenta</th>
+                        <th class="ten">Estatus</th>
+                        <th class="five"></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let user of GetWizis; let i = index">
+                        <td class="five">
+                            <img src="./../../../../assets/descarga.png" />
+                        </td>
+                        <td class="twenty">
+                            {{ user.fullname}}
+                        </td>
+                        <td class="ten">{{ user.id }}</td>
+                        <td class="fifteen">{{ user.phone }}</td>
+                        <td class="fifteen">{{ user.email }}m</td>
+                        <td class="ten">Interno</td>
+                        <td class="ten">
+                            <button class="active" (click)="active = !active" *ngIf="active">Habilitada</button>
+                            <button class="inactive" (click)="active = !active" *ngIf="!active">Deshabilitada</button>
+                        </td>
+                        <td class="ten">
+                            <button class="active" (click)="active = !active" *ngIf="active">Inactivo</button>
+                            <button class="inactive" (click)="active = !active" *ngIf="!active">Activo</button>
+                        </td>
+                        <td class="five point-more">
+                            <ng-template let-a="aVariable" [ngTemplateOutletContext]="{ aVariable: false }" [ngTemplateOutlet]="selfie" #selfie>
+                                <button (click)="a = !a">
+                              <i class="fas fa-ellipsis-h"></i>
+                            </button>
+                                <div>
+                                    <div class="more-float" *ngIf="a">
+                                        <button (click)="a = false">
+                                      <i class="fas fa-key"></i>
+                                      Deshabilitar
+                                  </button>
+                                        <button (click)="editWizi(i); a = false">
+                                      <i class="fas fa-edit"></i>
+                                      Edit
+                                  </button>
+                                        <button (click)="a = false">
+                                      <i class="fas fa-trash-alt"></i>
+                                      Delete
+                                  </button>
+                                    </div>
+                                </div>
+                            </ng-template>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
