--- a/src/app/panel/manejo-usuario/perfil/perfil.component.html
+++ b/src/app/panel/manejo-usuario/perfil/perfil.component.html
@@ -1,3 +1,51 @@
-<p>
-  perfil works!
-</p>
+<section class="container mt-5">
+  <h2>Perfil</h2>
+  <div class="row align-items-center">
+    <div class="col-auto">
+      <div class="info">
+        <img src="https://www.loginradius.com/wp-content/plugins/all-in-one-seo-pack/images/default-user-image.png" />
+        <label>Fernando Cortes Villalobos
+          <span>Adminsitrador</span>
+        </label>
+      </div>
+    </div>
+    <div class="col-auto">
+      <div class="buttons-wrapper">
+        <button [ngClass]="{'d-none': viewPassword}" (click)="viewPassword = !viewPassword" class="black">Cambiar Contraseña</button>
+        <button [ngClass]="{'d-none': !viewPassword}" (click)="viewPassword = !viewPassword" class="black">Cancelar</button>
+        <button class="pink">Guardar</button>
+      </div>
+    </div>
+
+  </div>
+  <div class="row mt-5">
+    <div class="form-group col-auto">
+      <label for="exampleInputPassword1">Nombre</label>
+      <input type="text" class="form-control" placeholder="Nombre">
+    </div>
+    <div class="form-group col-auto">
+      <label for="exampleInputPassword1">Teléfono</label>
+      <input type="tel" class="form-control" placeholder="333-333">
+    </div>
+  </div>
+  <div class="row">
+    <div class="form-group col-auto">
+      <label for="exampleInputPassword1">Apellido</label>
+      <input type="text" class="form-control" placeholder="Apellido">
+    </div>
+    <div class="form-group col-auto">
+      <label for="exampleInputPassword1">Email</label>
+      <input type="email" class="form-control" placeholder="333-333">
+    </div>
+  </div>
+  <div class="row" [ngClass]="{'d-none': !viewPassword}">
+      <div class="form-group col-auto">
+        <label for="exampleInputPassword1">Antigua Contraseña</label>
+        <input type="password" class="form-control">
+      </div>
+      <div class="form-group col-auto">
+        <label for="exampleInputPassword1">Nueva Contraseña</label>
+        <input type="password" class="form-control">
+      </div>
+    </div>  
+</section>
