--- a/src/app/panel/manejo-usuario/perfil/perfil.component.html
+++ b/src/app/panel/manejo-usuario/perfil/perfil.component.html
@@ -3,9 +3,9 @@
   <div class="row align-items-center">
     <div class="col-auto">
       <div class="info">
-        <img src="https://www.loginradius.com/wp-content/plugins/all-in-one-seo-pack/images/default-user-image.png" />
-        <label>Fernando Cortes Villalobos
-          <span>Adminsitrador</span>
+        <img [src]="user.image_source || defaultImg" />
+        <label>{{user.fullname}}
+          <span>{{user.role}}</span>
         </label>
       </div>
     </div>
@@ -13,29 +13,25 @@
       <div class="buttons-wrapper">
         <button [ngClass]="{'d-none': viewPassword}" (click)="viewPassword = !viewPassword" class="black">Cambiar Contraseña</button>
         <button [ngClass]="{'d-none': !viewPassword}" (click)="viewPassword = !viewPassword" class="black">Cancelar</button>
-        <button class="pink">Guardar</button>
+        <button class="pink" (click)="editUser()" >Guardar</button>
       </div>
     </div>
 
   </div>
   <div class="row mt-5">
-    <div class="form-group col-auto">
+    <div class="form-group col-6">
       <label for="exampleInputPassword1">Nombre</label>
-      <input type="text" class="form-control" placeholder="Nombre">
-    </div>
-    <div class="form-group col-auto">
-      <label for="exampleInputPassword1">Teléfono</label>
-      <input type="tel" class="form-control" placeholder="333-333">
+      <input type="text" class="form-control" [(ngModel)]='user.fullname' placeholder="Nombre">
     </div>
   </div>
   <div class="row">
-    <div class="form-group col-auto">
-      <label for="exampleInputPassword1">Apellido</label>
-      <input type="text" class="form-control" placeholder="Apellido">
+    <div class="form-group col-3">
+      <label for="exampleInputPassword1">Teléfono</label>
+      <input type="tel" class="form-control" [(ngModel)]='user.phone' placeholder="333-333">
     </div>
-    <div class="form-group col-auto">
+    <div class="form-group col-3">
       <label for="exampleInputPassword1">Email</label>
-      <input type="email" class="form-control" placeholder="333-333">
+      <input type="email" class="form-control" [(ngModel)]='user.email' placeholder="333-333">
     </div>
   </div>
   <div class="row" [ngClass]="{'d-none': !viewPassword}">
