--- a/src/app/panel/panel.component.html
+++ b/src/app/panel/panel.component.html
@@ -12,7 +12,7 @@
       <a class="col-12" [routerLink]="[ '/admin/servicios' ]" routerLinkActive="active-link">
         <mat-icon class="text-white mr-2">chat_bubble</mat-icon> Servicios
       </a>
-      <a class="col-12" [routerLink]="[ '/admin/carros' ]" routerLinkActive="active-link">
+      <a class="col-12" [routerLink]="[ '/admin/carros-categorizados' ]" routerLinkActive="active-link">
         <mat-icon class="text-white mr-2">chat_bubble</mat-icon> Carros categorizados
       </a>
       <a class="col-12" [routerLink]="[ '/admin/carros' ]" routerLinkActive="active-link">
