--- a/src/app/panel/directorios/carros-categorizados/carros-categorizados.component.html
+++ b/src/app/panel/directorios/carros-categorizados/carros-categorizados.component.html
@@ -7,13 +7,13 @@
       <h2>Carros</h2>
       <div class="user-buttons">
         <a (click)="navigate()" *ngIf="nav != 'client'"><i class="fas fa-plus"></i></a>
-        <a><i class="fas fa-bell"  [routerLink]="['/admin/notify']"></i></a>
+        <a><i class="fas fa-bell" [routerLink]="['/admin/notify']"></i></a>
         <div class="number-pink">3</div>
         <div class="input">
-            <i class="fas fa-search"></i>
-            <input type="text" name="search" (click)="search = !search" />
+          <i class="fas fa-search"></i>
+          <input type="text" name="search" (click)="search = !search" />
         </div>
-    </div>
+      </div>
     </div>
     <div class="user-tables">
       <table>
@@ -27,16 +27,15 @@
         </thead>
         <tbody>
           <tr>
-            <td>
+            <td class="p-4">
               {{ 'user.fullname' }}
             </td>
             <td>{{ 'user.phone '}}</td>
             <td>{{' user.email' }}</td>
 
             <td class="point-more">
-              <button (click)="a = !a">
-                <i class="fas fa-ellipsis-h"></i>
-              </button>
+              <button mat-button (click)="carId = c.id;$event.stopPropagation()" [matMenuTriggerFor]="menu"> <i
+                  class="fas fa-ellipsis-h"></i> </button>
             </td>
           </tr>
         </tbody>
@@ -44,3 +43,9 @@
     </div>
   </div>
 </div>
+
+<!-- Option Menu -->
+<mat-menu #menu="matMenu">
+  <button mat-menu-item class="txt-pink" (click)="editCar()" > <i class="fas fa-edit"></i> Edit </button>
+  <button mat-menu-item class="txt-pink" ><i class="fas fa-trash-alt"></i> Delete</button>
+</mat-menu>
