--- a/src/app/panel/directorios/nuevos-carros/nuevos-carros-modelo/nuevos-carros-modelo.component.html
+++ b/src/app/panel/directorios/nuevos-carros/nuevos-carros-modelo/nuevos-carros-modelo.component.html
@@ -6,7 +6,7 @@
       <div class="user-head">
         <h2 [routerLink]="['/admin/nuevos-carros']" class="cursor" >Carros / {{BrandName}} </h2>
         <div class="user-buttons">
-          <a (click)="editModel(0,'')" *ngIf="nav != 'client'"><i class="fas fa-plus"></i></a>
+          <a (click)="editModel(0,'',1)" *ngIf="nav != 'client'"><i class="fas fa-plus"></i></a>
           <a><i class="fas fa-bell" [routerLink]="['/admin/notify']"></i></a>
           <div class="number-pink">3</div>
           <div class="input">
@@ -24,7 +24,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let c of cars" (click)="editModel(c.id,c.name)" >
+            <tr *ngFor="let c of cars" (click)="editModel(c.id,c.name,c.size)" >
               <td class="text-center p-4">
                 {{ c.name }}
               </td>
